--- a/CSsharp-Web-Project/Views/Client/Add.cshtml
+++ b/CSsharp-Web-Project/Views/Client/Add.cshtml
@@ -1,12 +1,6 @@
 ﻿@model AddClientViewModel
 
-@{
-    ViewData["Title"] = "Add";
-}
-
-<h1>Add</h1>
-
-<h4>AddClientViewModel</h4>
+<h3 class="text-center">You are just one step away from ordering your products.</h3>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -48,7 +42,7 @@
                 <span asp-validation-for="OrderDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Complete Order" class="btn btn-primary" />
             </div>
         </form>
     </div>
