--- a/CSsharp-Web-Project/Views/Client/All.cshtml
+++ b/CSsharp-Web-Project/Views/Client/All.cshtml
@@ -1,10 +1,6 @@
 ﻿@model IEnumerable<ShopSystems.Web.ViewModels.Client.AllOrdersViewModel>
 
-@{
-    ViewData["Title"] = "All";
-}
-
-<h1 class="text-center">All Clients</h1>
+<h3 class="text-center">Your Clients</h3>
 
 @*<p>
     <a asp-action="Create">Create New</a>
